--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 body {
+    /* direction: rtl; */
     background-color: teal;
     margin: 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+body.rtl {
+    direction: rtl;
 }
 
 button {
@@ -24,6 +29,7 @@ button:hover{
     height: 100px;
     margin: auto;
     border-bottom: 1px solid grey;
+    position: relative;
     
 }
 
@@ -139,10 +145,10 @@ td {
 img {
     width: 111px;
     height: 161px;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-block-start: 10px;
+    margin-inline-start: 10px;
     float: left;
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 
 .book-rate {
@@ -185,7 +191,8 @@ th{
 }
 
 .price-range{
-    margin-left: 5px;
+    margin-inline-start: 5px;
+    /* margin-left: 5px; */
 }
 
 .table-btn, .divs-btn{
@@ -198,19 +205,34 @@ th{
 }
 
 .table-btn {
-    right: 27px;
+    /* right: 27px; */
+    /* left: 27px; */
     background-image: url(/img/table-btn.png);
-    border-right: 0px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
+    border-inline-end: 0px;
+    border-end-end-radius: 0px;
+    border-start-end-radius: 0px;
 }
 
 .divs-btn {
-    right: 5px;
+    /* right: 5px; */
+    /* left: 5px; */
     background-image: url(/img/divs-btn.png);
-    border-left: 0px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
+    border-inline-start: 0px;
+    border-start-start-radius: 0px;
+    border-end-start-radius: 0px;
+}
+
+.table-btn.ltr {
+    right: 27px;
+}
+.table-btn.rtl {
+    left: 27px;
+}
+.divs-btn.ltr {
+    right: 5px;
+}
+.divs-btn.rtl {
+    left: 5px;
 }
 
 .book {
@@ -321,4 +343,25 @@ th{
 
 .current {
     box-shadow: 0px 0px 5px 3px #FFFFFF inset;
+}
+
+.en {
+    background-image: url(../img/united-kingdom.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 10px;
+    top: 50px;
+}
+.he {
+    background-image: url(../img/israel.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 10px;
+    top: 25px;
 }
